[package]
name = "rpc"
version = "0.1.0"
authors = ["Gaylor Bosson <gaylor.bosson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc_macro = { path = "rpc_macro", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mio = "0.6"
